added artists api from spotify

--- a/src/global.css
+++ b/src/global.css
@@ -144,3 +144,11 @@
 .select-custom::after {
   border-bottom-color: #111;
 }
+
+.loading-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh; /* Full height of the viewport */
+  background-color: #f4f4f4; /* Light background color */
+}
