--- a/src/global.css
+++ b/src/global.css
@@ -90,7 +90,8 @@
   padding: 16px;
   margin-top: auto;
   background-color: #f1f1f1;
-  margin-left: 276px; /* Adjust based on sidebar */
+  margin-left: 300px; /* Adjust based on sidebar */
+  width: 1270px;
 }
 
 /* App Layout */
@@ -151,4 +152,29 @@
   align-items: center;
   height: 100vh; /* Full height of the viewport */
   background-color: #f4f4f4; /* Light background color */
+}
+/* Hide the default scrollbar but keep the thin one visible */
+html,
+body {
+  /* overflow: hidden; */
+  margin: 0;
+  padding: 0;
+}
+
+::-webkit-scrollbar {
+  width: 4px; /* for vertical scrollbar */
+  height: 4px; /* for horizontal scrollbar */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Color of the scrollbar thumb */
+  border-radius: 10px; /* Optional: rounded corners */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Color of the scrollbar track */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(0, 0, 0, 0); /* slightly visible on hover if needed */
 }
